--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     <script>
         // Supabase配置 - 替换为您的实际配置
         const supabaseUrl = 'https://nvakaqgfdcdbaeiyutqq.supabase.co';
-        const supabaseKey = 'process.env.SUPABASE_KEY';
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52YWthcWdmZGNkYmFlaXl1dHFxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk2NTg5NDAsImV4cCI6MjA3NTIzNDk0MH0.VetnkjVe-XhmFf3n7TJHmpoE6l_YP_XvR1B2hamLZqs';
         const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
         // DOM元素
